--- a/CH151/presentAble.css
+++ b/CH151/presentAble.css
@@ -1,3 +1,37 @@
-.aSlideChapters, .aSlideContent {
-    max-height: 481px;
-  }
+/* Copy of Columbia Template styles */
+@import 'styles.min.css';
+
+/* Need reboot from bootstrap to clean up CSS otherwise spacings are different from original presentables */
+@import 'https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css';
+
+.aSlideChapters,
+.aSlideContent {
+  max-height: 481px;
+}
+
+@font-face {
+  font-family: 'glacial_indifferencebold';
+  src: url('glacialindifference-bold-webfont.woff2') format('woff2'),
+    url('glacialindifference-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'glacial_indifferenceitalic';
+  src: url('glacialindifference-italic-webfont.woff2') format('woff2'),
+    url('glacialindifference-italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'glacial_indifferenceregular';
+  src: url('glacialindifference-regular-webfont.woff2') format('woff2'),
+    url('glacialindifference-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
