--- a/Presentables/presentAble.css
+++ b/Presentables/presentAble.css
@@ -4,6 +4,14 @@
 /* Need reboot from bootstrap to clean up CSS otherwise spacings are different from original presentables */
 @import 'https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css';
 
+html {
+  overscroll-behavior: contain;
+}
+body {
+  overscroll-behavior: contain;
+}
+
+
 .aSlideChapters,
 .aSlideContent {
   max-height: 481px;
